# AeonNode

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
docs/my-docs/: package-lock.json
examples/: weather_station.rs
pcb/AeonNode/: AeonNode.kicad_prl  AeonNode.kicad_pro  AeonNode.kicad_sch  fp-info-cache  fp-lib-table
pcb/AeonNode/localfootprints.pretty/: RAK3172-9-SM-NI.mod  RAK31729SMNI.kicad_mod
src/: lib.rs
src/core/: board.rs  mod.rs
src/drivers/: mod.rs  sensor_trait.rs
src/lora/: lorawan.rs  mod.rs  sx1276.rs
src/power/: mod.rs
