[package]
name = "aeonnode"
version = "0.1.0"
edition = "2026"
authors = ["Casper <casper@aeonnode.dev>"]
license = "MIT OR Apache-2.0"
description = "Low-power IoT framework based on Embassy.rs for RAK3112 (STM32L0 + SX1276)"

[dependencies]
# Embassy async runtime
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768"] }
embassy-sync = "0.5"

# Embassy STM32 HAL
embassy-stm32 = { version = "0.1", features = [
    "stm32l082cz",           # RAK3112 uses STM32L082CZ
    "time-driver-any",
    "low-power",
    "exti",
    "memory-x"
] }

# Cortex-M runtime
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# Async traits and utilities
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"

# Static memory allocation
static_cell = "2.0"

# Defmt for logging (optimized for embedded)
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# LoRa driver (to be implemented/integrated)
# lora-phy = { version = "2.0", optional = true }

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization
debug = true             # Keep debug info for probe-rs
strip = false

[profile.dev]
opt-level = 1            # Some optimization for dev builds
debug = true

[[example]]
name = "weather_station"
required-features = []
